<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_16sdp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_sampah_berkah"
            android:fontFamily="@font/robotomedium"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/textBlack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_saldo_sampah_anda"
            android:fontFamily="@font/robotoregular"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/textBlack"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/main_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/main_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_kompis"
            android:fontFamily="@font/robotoregular"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/textBlack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/main_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="290.000"
            android:fontFamily="@font/robotobold"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/main_balance_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableEndCompat="@drawable/ic_info"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp"
            android:fontFamily="@font/robotobold"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="@id/main_balance"
            app:layout_constraintEnd_toStartOf="@id/main_balance" />

        <TextView
            android:id="@+id/main_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20.000"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/textBlack"
            android:fontFamily="@font/robotomedium"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/main_balance"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poin_kompis"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/textBlack"
            android:fontFamily="@font/robotoregular"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/main_balance"
            app:layout_constraintEnd_toStartOf="@id/main_point"/>

        <ImageView
            android:id="@+id/main_history"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/image_payment_history"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_point"
            app:layout_constraintEnd_toStartOf="@id/main_transfer"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/textBlack"
            android:fontFamily="@font/helvetica"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/main_history"
            app:layout_constraintLeft_toLeftOf="@id/main_history"
            app:layout_constraintRight_toRightOf="@id/main_history"
            />

        <ImageView
            android:id="@+id/main_transfer"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/image_payment_transfer"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/main_history"
            app:layout_constraintEnd_toStartOf="@id/main_withdraw"
            app:layout_constraintTop_toBottomOf="@id/main_point"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/textBlack"
            android:fontFamily="@font/helvetica"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/main_transfer"
            app:layout_constraintLeft_toLeftOf="@id/main_transfer"
            app:layout_constraintRight_toRightOf="@id/main_transfer"
            />

        <ImageView
            android:id="@+id/main_withdraw"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/image_payment_cash"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/main_transfer"
            app:layout_constraintTop_toBottomOf="@id/main_point"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarik_tunai"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/textBlack"
            android:fontFamily="@font/helvetica"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/main_withdraw"
            app:layout_constraintLeft_toLeftOf="@id/main_withdraw"
            app:layout_constraintRight_toRightOf="@id/main_withdraw"
            />


</androidx.constraintlayout.widget.ConstraintLayout>