<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingBottom="@dimen/_20sdp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="@dimen/_40sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/main_top"/>

        <ImageView
            android:id="@+id/main_top"
            android:layout_width="0dp"
            android:layout_height="@dimen/_180sdp"
            android:src="@drawable/ic_bg_top"
            android:scaleType="fitStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/main_qr"/>

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/image_logo"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_16sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_profile"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_top_profil"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/main_notification"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_top_notification"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/main_profile"/>

        <ImageView
            android:id="@+id/main_qr"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_top_qr"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/main_notification"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/main_logo">

            <include layout="@layout/item_main_payment"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/main_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_bank_sampah_kompis"
            android:fontFamily="@font/helvetica"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/textBlack"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_payment"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_menu_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:overScrollMode="never"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/main_menu_title"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/main_menu_rv">

            <include layout="@layout/item_main_info" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/main_pickup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_penjemputan"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/helvetica"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_26sdp"
            app:layout_constraintTop_toBottomOf="@id/main_info"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/main_pickup_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10ssp"
            android:text="@string/lihat_semua"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/helvetica"
            android:layout_marginEnd="@dimen/_32sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_pickup_title"
            app:layout_constraintBottom_toBottomOf="@id/main_pickup_title"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_pickup_close">

            <include layout="@layout/item_main_pickup"/>

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/main_pickup_close"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_close"
            android:elevation="@dimen/_4sdp"
            android:background="@drawable/bg_close"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_pickup_title"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
